--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <head>
   <link rel="stylesheet" href="assets/styles.css">
-  <script src="assets/p5/p5.min.js"></script>
-  <script src="assets/p5/p5.sound.min.js"></script>
-  <script type="module" src="dist/main.js"></script>
+  <script src="./assets/p5/p5.min.js"></script>
+  <script src="./assets/p5/p5.sound.min.js"></script>
+  <script type="module" src="./dist/main.js"></script>
 </head>
 
 <body>
