--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="assets/styles.css">
   <script src="./assets/p5/p5.min.js"></script>
   <script src="./assets/p5/p5.sound.min.js"></script>
-  <script type="module" src="./dist/main.js"></script>
+  <script type="module" src="./main.js"></script>
 </head>
 
 <body>
