--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="%sveltekit.assets%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="%sveltekit.assets%/p5/p5.min.js"></script>
-  <!-- <script src="%sveltekit.assets%/p5/p5.sound.min.js"></script> -->
+  <script src="%sveltekit.assets%/p5/p5.sound.min.js"></script>
   %sveltekit.head%
 </head>
 
