--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
 </head>
 
 <body data-sveltekit-preload-data="hover">
-  <div style="display: contents">%sveltekit.body%</div>
+  <div class="app">%sveltekit.body%</div>
 </body>
 
 </html>
