--- a/src/app.html
+++ b/src/app.html
@@ -7,10 +7,26 @@
   <link rel="icon" href="%sveltekit.assets%/favicon.png" />
   <script src="%sveltekit.assets%/p5/p5.min.js"></script>
   <script src="%sveltekit.assets%/p5/p5.sound.min.js"></script>
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="04fbd4d2-0f3d-4c78-8e78-cbdae216f430"
+    data-blockingmode="auto" type="text/javascript"></script>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-K3FSSH7R');</script>
+  <!-- End Google Tag Manager -->
   %sveltekit.head%
 </head>
 
 <body data-sveltekit-preload-data="hover">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K3FSSH7R" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div class="app">%sveltekit.body%</div>
 </body>
 
