revert: gtag comment

--- a/src/app.html
+++ b/src/app.html
@@ -19,15 +19,15 @@
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-K3FSSH7R');</script>
   <!-- End Google Tag Manager -->
-  <!-- Google tag (gtag.js)
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ4EV84EVN"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-P1014Q5872"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-EQ4EV84EVN');
-  </script> -->
+    gtag('config', 'G-P1014Q5872');
+  </script>
   %sveltekit.head%
 </head>
 
