--- a/src/app.html
+++ b/src/app.html
@@ -20,13 +20,13 @@
     })(window, document, 'script', 'dataLayer', 'GTM-K3FSSH7R');</script>
   <!-- End Google Tag Manager -->
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-P1014Q5872"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ4EV84EVN"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-P1014Q5872');
+    gtag('config', 'G-EQ4EV84EVN');
   </script>
   %sveltekit.head%
 </head>
